Fix broken layout for editor in proofreading mode
The translate editor was showing a gap at the top which was produced
by the elements behind it. This comments removes these elements from
the layout when the editor is open.

--- a/resources/css/ext.translate.proofread.css
+++ b/resources/css/ext.translate.proofread.css
@@ -13,6 +13,13 @@
 	background: #fefefe;
 }
 
+.tux-message-proofread.open .tux-proofread-status,
+.tux-message-proofread.open .tux-proofread-source,
+.tux-message-proofread.open .tux-proofread-translation,
+.tux-message-proofread.open .tux-proofread-action-block {
+	display:none;
+}
+
 .tux-proofread-source {
 	color: #555;
 	font-size: 16px;
